# herdr-launcher

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.sh  herdr-plugin.toml  install.sh
examples/forms/: greet.mjs
examples/workflows/: greet.mjs  greet.toml  new-branch.toml
examples/workflows/launch-agent/: agent-launcher.sh  agents  agents.sh  launch-agent.toml  list-branches.sh
src/: main.rs
